--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -9,8 +9,12 @@
 
   <body>
     <h1>Design your taco!</h1>
+        <h2>Feelin' hungry, <span th:text="${user.fullname}">NAME</span>?</h2>
     <img th:src="@{/images/TacoCloud.png}"/>
-	<form method="POST" th:object="${taco}">
+        <form method="POST" th:action="@{/logout}" id="logoutForm">
+      <input type="submit" value="Logout"/>
+    </form>
+	<form method="POST" th:object="${taco}" th:action="@{/design}" id="tacoForm">
 	<span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
           th:errors="*{ingredients}">Ingredient Error</span>
@@ -67,5 +71,6 @@
 
       <button>Submit your taco</button>
       </div>
+      </form>
   </body>
 </html>
