--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,9 @@
 	<h1>Welcome</h1>
 	<img th:src="@{/images/TacoCloud.png}"/>
 	
-	<form method = "POST" th:object = "${taco}">
+	<form method = "POST" th:action="@{/logout}" id="logoutForm">
+		<input type="submit" value="Logout"/>
+	</form>
+	<a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 </html>
